# heat-dooRS

./: .pre-commit-config.yaml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs  motor_control.rs  ntc.rs  onewire.rs
