[package]
name = "heat-dooRS"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = { version = "0.3.8", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", features = ["memory-x", "stm32f103c8", "time-driver-any", "exti", "unstable-pac"] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768"] }
embedded-io-async = "0.6.1"
panic-halt = "0.2.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv7m-none-eabi", artifact-dir = "out/" }
]

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "667dfa34b525f727936d621ba91001fa25d80426" }
embassy-executor-macros = { git = "https://github.com/embassy-rs/embassy", rev = "667dfa34b525f727936d621ba91001fa25d80426" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "667dfa34b525f727936d621ba91001fa25d80426" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "667dfa34b525f727936d621ba91001fa25d80426" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "667dfa34b525f727936d621ba91001fa25d80426" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "667dfa34b525f727936d621ba91001fa25d80426" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "667dfa34b525f727936d621ba91001fa25d80426" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy", rev = "667dfa34b525f727936d621ba91001fa25d80426" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy", rev = "667dfa34b525f727936d621ba91001fa25d80426" }
