[package]
name = "heat-dooRS"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.4.0", features = ["memory-x", "stm32f103c8", "time-driver-any", "exti", "unstable-pac"] }
embassy-sync = { version = "0.7.2", features = [] }
embassy-time = { version = "0.5.0", features = ["tick-hz-32_768"] }
embedded-io-async = "0.6.1"
panic-halt = "1"
panic-probe = { version = "1", features = ["print-defmt"], optional = true }

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv7m-none-eabi", artifact-dir = "out/" }
]
